--- a/.github/workflows/hourly-weather.yml
+++ b/.github/workflows/hourly-weather.yml
@@ -1,36 +1,31 @@
-name: Hourly Weather Average (IST - High Accuracy)
+name: Hourly Weather (Self-Healing)
 
 on:
   schedule:
-    # Runs at 5 and 35 minutes past every hour
-    - cron: "5,35 * * * *"
+    - cron: "*/15 * * * *"
   workflow_dispatch:
 
 jobs:
-  collect-weather:
+  collect:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      - name: Install dependencies
-        run: |
-          pip install requests
+      - run: pip install requests
 
-      - name: Run weather averaging script
+      - name: Fetch missing hourly slots
         env:
           AMBIENT_API_KEY: ${{ secrets.AMBIENT_API_KEY }}
           AMBIENT_APP_KEY: ${{ secrets.AMBIENT_APP_KEY }}
         run: |
-          python scripts/fetch_last_30min.py
+          python scripts/fetch_missing_slots.py
 
-      - name: Commit and push data
+      - name: Commit data
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
@@ -38,8 +33,8 @@ jobs:
           git add data/hourly
 
           if git diff --cached --quiet; then
-            echo "No new data to commit"
+            echo "No new data"
           else
-            git commit -m "Add averaged weather data"
+            git commit -m "Backfill missing hourly weather slots"
             git push
           fi
